workspace-sf/force-app/main/default/objects/PepRelacionamento__c/PepRelacionamento__c.object-meta.xml
<CustomObject>
    <label>Pep Relacionamento</label>
    <nameField>
        <displayFormat>PR-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pep Relacionamentos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>