workspace-sf/force-app/main/default/objects/PepRelacionamento__c/fields/codigoPEP__c.field-meta.xml
<CustomField>
    <fullName>codigoPEP__c</fullName>
    <label>Código Pep</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>