workspace-sf/force-app/main/default/objects/PepRelacionamento__c/fields/DataAtualizacao__c.field-meta.xml
<CustomField>
    <fullName>DataAtualizacao__c</fullName>
    <label>Data Atualização</label>
    <length>255</length>
    <type>Text</type>
</CustomField>