workspace-sf/force-app/main/default/objects/PepRelacionamento__c/fields/GrauParentesco__c.field-meta.xml
<CustomField>
    <fullName>GrauParentesco__c</fullName>
    <label>Grau de Parentesco</label>
    <length>255</length>
    <type>Text</type>
</CustomField>