workspace-sf/force-app/main/default/objects/PepRelacionamento__c/fields/NomePep__c.field-meta.xml
<CustomField>
    <fullName>NomePep__c</fullName>
    <label>Nome</label>
    <length>255</length>
    <type>Text</type>
</CustomField>