workspace-sf/force-app/main/default/objects/PepRelacionamento__c/fields/Pep__c.field-meta.xml
<CustomField>
    <fullName>Pep__c</fullName>
    <label>Pep</label>
    <referenceTo>Pep__c</referenceTo>
    <relationshipLabel>Pep Relacionamentos</relationshipLabel>
    <relationshipName>Pep_Relacionamentos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>